k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passport-api
  namespace: passport-reader
  labels:
    app.kubernetes.io/name: passport-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: passport-reader
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: public
  tls:
    - hosts:
        - passport-api.mr3od.dev
      secretName: passport-api-tls
  rules:
    - host: passport-api.mr3od.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-api
                port:
                  number: 8000
